<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="view_alarms">View Alarms</string>
    <string name="view_history">View Alarm History</string>
    <string name="date">Date</string>
    <string name="alarms">Alarms</string>
    <string name="history">Alarm History</string>
    <string name="settings">User Settings</string>

    <string name="alarm_number">Alarm #</string>
    <string name="clear_history">Clear History</string>
    <string name="delete_alarms">Delete All Alarms</string>

    <string name="image_description">Image to be used for the alarm</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="ringtone">Click to select ringtone</string>
    <string name="alarm_snooze">Snooze?</string>
    <string name="alarm_email">Email?</string>
    <string name="alarm_repeating">Repeating?</string>
    <string name="alarm_ringtone">Ringtone:</string>
    <string name="enter_email">Please enter an Email Address</string>

    <string name="day_of_week_mon">Mon</string>
    <string name="day_of_week_tues">Tues</string>
    <string name="day_of_week_wed">Wed</string>
    <string name="day_of_week_thurs">Thurs</string>
    <string name="day_of_week_fri">Fri</string>
    <string name="day_of_week_sat">Sat</string>
    <string name="day_of_week_sun">Sun</string>
    <string name="everyday">Everyday</string>
    
    <string name="title_activity_set_alarm">SetAlarm</string>
    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>
    <string name="alarm_event">Alarm Event</string>
    <string name="silence">Silence</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>

    <string name="context_menu">What would you like to do?</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>

    <string name="google_account">Google Account: </string>
    <string name="sync_alarms">Sync Calendar Alarms</string>
    <string name="sync_button">Sync Now</string>
    <string name="sync_with_calendar">Sync Alarms with Calendar</string>
    <string name="sync_email">Email to Sync With</string>
    <string name="auto_sync">Synchronize Automatically</string>
    <string name="customize_theme">Customize Theme</string>
    <string name="customize_color">Customize</string>
    <string name="change_background">Change Background Color</string>
    <string name="change_font">Change Font Color</string>
    <string name="reset_theme">Reset to Default Theme</string>
    <string name="reset">Reset</string>
    <string name="adjust_volume">Adjust Alarm Volume</string>
    <string name="save">Save</string>

    <color name="background_color">#333333</color>
    <color name="text_color">#FFFFFF</color>

</resources>
