<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.westga.justinwalker.alert.MainActivity" >
    
    <item 
        android:id="@+id/action_create_alarm"
        android:orderInCategory="1" 
        android:showAsAction="never"
        android:title="@string/create_alarm" />
    
    <item
        android:id="@+id/action_view_alarms"
        android:orderInCategory="2"
        android:title="@string/view_alarms"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
