<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activeAlarmMainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/alarmEventImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:contentDescription="@string/alarm_event"
        android:src="@drawable/alarm" />

    <Button
        android:id="@+id/snoozeAlarmButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/snooze"
        android:textSize="@dimen/active_alarm_font_size" />

    <LinearLayout
        android:id="@+id/linearLayoutAlarmControls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/silenceAlarmButton"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/silence"
            android:textSize="@dimen/active_alarm_font_size" />

        <Button
            android:id="@+id/dismissAlarmButton"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dismiss"
            android:textSize="@dimen/active_alarm_font_size" />
    </LinearLayout>

</LinearLayout>