<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/syncWithCalendarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/syncWithCalendarText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.90"
                    android:text="@string/sync_with_calendar"
                    android:textSize="@dimen/details_regular"
                    android:textColor="@color/text_color"/>

                <CheckBox
                    android:id="@+id/syncCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:clickable="false"/>
            </LinearLayout>

            <View style="@style/Divider"/>

            <LinearLayout
                android:id="@+id/syncDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_small"
                        android:textColor="@color/text_color"
                        android:text="@string/google_account"/>

                    <EditText
                        android:id="@+id/syncEmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/details_small"
                        android:textColor="@color/text_color"
                        android:hint="@string/sync_email"
                        android:ems="10"/>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:id="@+id/autoSyncLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/autoSyncText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.90"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/auto_sync"
                        android:textSize="@dimen/details_small"
                        android:textColor="@color/text_color"/>

                    <CheckBox
                        android:id="@+id/autoSyncCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center"
                        android:clickable="false"/>

                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/syncTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.80"
                        android:textSize="@dimen/details_small"
                        android:textColor="@color/text_color"
                        android:text="@string/sync_alarms"
                        android:gravity="center_vertical"/>

                    <Button
                        android:id="@+id/syncButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/details_small"
                        android:textColor="@color/text_color"
                        android:text="@string/sync_button"
                        android:gravity="center"/>
                </LinearLayout>

                <View style="@style/Divider"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/details_regular"
                    android:text="@string/customize_theme"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"/>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/backgroundColorTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.80"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/change_background"
                            android:gravity="center_vertical"/>

                        <Button
                            android:id="@+id/backgroundColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/customize_color"
                            android:gravity="center"/>
                    </LinearLayout>

                    <View style="@style/Divider"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fontColorTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.80"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/change_font"
                            android:gravity="center_vertical"/>

                        <Button
                            android:id="@+id/fontColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/customize_color"
                            android:gravity="center"/>
                    </LinearLayout>

                    <View style="@style/Divider"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/resetColorTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.80"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/reset_theme"
                            android:gravity="center_vertical"/>

                        <Button
                            android:id="@+id/resetColorButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/details_small"
                            android:textColor="@color/text_color"
                            android:text="@string/reset"
                            android:gravity="center"/>
                    </LinearLayout>

                    <View style="@style/Divider"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        </ScrollView>

</LinearLayout>
