<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/alarmDetailsTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/alarmImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:clickable="true"
            android:src="@drawable/alarm"
            android:contentDescription="@string/image_description"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarmDetailsBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:orientation="vertical"
        android:layout_marginTop="25dp" >

        <EditText
            android:id="@+id/alarmNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/alarm_name"
            android:textColor="@color/white"
            android:ems="10"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" >

        <Button
            android:id="@+id/createAlarmButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_alarm"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>