<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.20" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.80">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarmTimeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_large"
                android:textColor="@color/white"
                android:gravity="center" />

            <TextView
                android:id="@+id/alarmDaysView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_regular"
                android:textColor="@color/white"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alarmRingtoneSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:text="@string/alarm_ringtone" />

                <TextView
                    android:id="@+id/alarmSnoozeSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:text="@string/alarm_snooze" />

                <TextView
                    android:id="@+id/alarmEmailSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:text="@string/alarm_email" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alarmRingtoneView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:gravity="right"
                    android:text="RINGTONE" />

                <TextView
                    android:id="@+id/alarmSnoozeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:gravity="right"
                    android:text="Snooze"/>

                <TextView
                    android:id="@+id/alarmEmailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_small"
                    android:textColor="@color/white"
                    android:gravity="right"
                    android:text="Email"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:gravity="center">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--<ImageView-->
                <!--android:id="@+id/deleteAlarmImage"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:src="@drawable/alarm"/>-->

        </LinearLayout>



    </LinearLayout>


    <!--<ImageView-->
        <!--android:id="@+id/icon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginRight="6dip"-->
        <!--android:contentDescription="TODO"-->
        <!--android:src="@drawable/ic_launcher" />-->

    <!--<TextView-->
        <!--android:id="@+id/secondLine"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="26dip"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_toRightOf="@id/icon"-->
        <!--android:ellipsize="marquee"-->
        <!--android:singleLine="true"-->
        <!--android:text="Description"-->
        <!--android:textSize="12sp"-->
        <!--android:textColor="@color/white" />-->

    <!--<TextView-->
        <!--android:id="@+id/firstLine"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@id/secondLine"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignWithParentIfMissing="true"-->
        <!--android:layout_toRightOf="@id/icon"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="Example application"-->
        <!--android:textSize="16sp"-->
        <!--android:textColor="@color/white" />-->

</LinearLayout>
